DigicielFull/force-app/main/default/objects/gnx__Legal_entity_configuration__c/fields/gnx__Bypass_context__c.field-meta.xml
<CustomField>
    <fullName>gnx__Bypass_context__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contourner le contexte</label>
    <type>Checkbox</type>
</CustomField>