DigicielFull/force-app/main/default/objects/gnx__Legal_entity_configuration__c/fields/gnx__Default_configuration__c.field-meta.xml
<CustomField>
    <fullName>gnx__Default_configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Configuration par défaut</label>
    <type>Checkbox</type>
</CustomField>