DigicielFull/force-app/main/default/objects/gnx__Legal_entity_configuration__c/fields/gnx__Document_template__c.field-meta.xml
<CustomField>
    <fullName>gnx__Document_template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modèle de document</label>
    <referenceTo>gnx__Document_template__c</referenceTo>
    <relationshipLabel>Configurations d&apos;entité légale</relationshipLabel>
    <relationshipName>Legal_entity_configuration</relationshipName>
    <type>Lookup</type>
</CustomField>