DigicielFull/force-app/main/default/objects/gnx__Legal_entity_configuration__c/fields/gnx__Donation_category_path__c.field-meta.xml
<CustomField>
    <fullName>gnx__Donation_category_path__c</fullName>
    <label>Forme du don</label>
    <length>255</length>
    <type>Text</type>
</CustomField>