DigicielFull/force-app/main/default/objects/gnx__Legal_entity_configuration__c/fields/gnx__Donor_lastname_path__c.field-meta.xml
<CustomField>
    <fullName>gnx__Donor_lastname_path__c</fullName>
    <defaultValue>&quot;npsp__Primary_Contact__r.LastName&quot;</defaultValue>
    <label>Nom Donateur Particulier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>