DigicielFull/force-app/main/default/objects/gnx__Legal_entity_configuration__c/fields/gnx__Donor_postal_code_path__c.field-meta.xml
<CustomField>
    <fullName>gnx__Donor_postal_code_path__c</fullName>
    <defaultValue>&quot;npsp__Primary_Contact__r.MailingPostalCode&quot;</defaultValue>
    <label>Code postal du donateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>