DigicielFull/force-app/main/default/objects/gnx__Legal_entity_configuration__c/fields/gnx__Legal_entity__c.field-meta.xml
<CustomField>
    <fullName>gnx__Legal_entity__c</fullName>
    <label>Entité légale</label>
    <referenceTo>gnx__Legal_entity__c</referenceTo>
    <relationshipLabel>Configurations d&apos;entité légale</relationshipLabel>
    <relationshipName>Legal_entity_configuration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>