DigicielFull/force-app/main/default/objects/gnx__Legal_entity_configuration__c/fields/gnx__Lines_condition__c.field-meta.xml
<CustomField>
    <fullName>gnx__Lines_condition__c</fullName>
    <inlineHelpText>Filtre sur les lignes du reçu fiscal, il faut renseigner ce qui suit le WHERE d&apos;une requête SOQL.</inlineHelpText>
    <label>Condition sur les lignes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>