DigicielFull/force-app/main/default/objects/gnx__Legal_entity_configuration__c/fields/gnx__Lookup_to_TR__c.field-meta.xml
<CustomField>
    <fullName>gnx__Lookup_to_TR__c</fullName>
    <defaultValue>&quot;npe01__Opportunity__c&quot;</defaultValue>
    <inlineHelpText>Obligatoire seulement si l&apos;objet Ligne de RF est différent de l&apos;objet Reçus fiscal</inlineHelpText>
    <label>Nom de la référence vers le reçu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>