DigicielFull/force-app/main/default/objects/gnx__Legal_entity_configuration__c/fields/gnx__Tax_receipt_object__c.field-meta.xml
<CustomField>
    <fullName>gnx__Tax_receipt_object__c</fullName>
    <defaultValue>&quot;Opportunity&quot;</defaultValue>
    <inlineHelpText>Objet à partir duquel les informations de votre reçu fiscal seront initialisées</inlineHelpText>
    <label>Nom API Objet (Reçu Fiscal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>